# please

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: python-publish.yml
please/: __init__.py  cli.py
please/internal/: argument.py  env.py  registertask.py  shexec.py  taskcontext.py  taskfunc.py  tasks.py  types.py  zip.py
