[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "please"
version = "0.0.1"
authors = [{ name = "Avi Parampampam", email = "aviparampampam@gmail.com" }]
description = "Simple task runner"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
pls = "please.cli:main"

[project.urls]
Homepage = "https://github.com/av1ppp/please"
Issues = "https://github.com/av1ppp/please/issues"
